bones for fragments done

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -41,6 +41,19 @@
         android:layout_height="match_parent"
         android:layout_margin="20dp">
 
+        <!--<EditText-->
+            <!--android:id="@+id/register_username"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:background="@android:color/darker_gray"-->
+            <!--android:hint="Email"-->
+            <!--android:inputType="textEmailAddress"-->
+            <!--android:padding="10dp"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent"/>-->
+
             <EditText
                 android:id="@+id/register_email"
                 android:layout_width="match_parent"
