--- a/app/src/main/res/layout/fragment_notif.xml
+++ b/app/src/main/res/layout/fragment_notif.xml
@@ -16,6 +16,7 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/notif_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
