--- a/app/src/main/res/layout/fragment_profile_third.xml
+++ b/app/src/main/res/layout/fragment_profile_third.xml
@@ -35,6 +35,7 @@
                     android:layout_margin="20dp"/>
 
                 <TextView
+                    android:id="@+id/fab_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:elevation="6dp"
@@ -115,7 +116,7 @@
                 android:id="@+id/profile_about_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:text="About Me"
                 android:textStyle="bold"
@@ -148,15 +149,15 @@
                 app:layout_constraintStart_toStartOf="@id/profile_image"
                 app:layout_constraintTop_toBottomOf="@id/profile_about_text"/>
 
-            <RelativeLayout
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/profile_squad_list"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="@id/profile_about_text"
-                app:layout_constraintHeight_percent=".1"
-                app:layout_constraintStart_toStartOf="@id/profile_about_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent=".12"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/profile_squad_label"
                 tools:itemCount="3"
                 tools:layoutManager="android.support.v7.widget.GridLayoutManager"
@@ -189,14 +190,14 @@
                 app:layout_constraintStart_toStartOf="@id/profile_image"
                 app:layout_constraintTop_toBottomOf="@id/profile_squad_page"/>
 
-            <RelativeLayout
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/profile_history_list"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="10dp"
-                app:layout_constraintHeight_percent=".1"
-                app:layout_constraintEnd_toEndOf="@id/profile_about_text"
-                app:layout_constraintStart_toStartOf="@id/profile_about_text"
+                app:layout_constraintHeight_percent=".12"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/profile_history_label" />
 
             <TextView
@@ -223,14 +224,14 @@
                 app:layout_constraintStart_toStartOf="@id/profile_image"
                 app:layout_constraintTop_toBottomOf="@id/profile_history_page"/>
 
-            <RelativeLayout
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/profile_post_list"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="10dp"
-                app:layout_constraintHeight_percent=".1"
-                app:layout_constraintEnd_toEndOf="@id/profile_about_text"
-                app:layout_constraintStart_toStartOf="@id/profile_about_text"
+                app:layout_constraintHeight_percent=".15"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/profile_post_label" />
 
             <TextView
@@ -257,14 +258,14 @@
                 app:layout_constraintStart_toStartOf="@id/profile_image"
                 app:layout_constraintTop_toBottomOf="@id/profile_post_page"/>
 
-            <RelativeLayout
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/profile_friends_list"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="10dp"
-                app:layout_constraintHeight_percent=".1"
-                app:layout_constraintEnd_toEndOf="@id/profile_about_text"
-                app:layout_constraintStart_toStartOf="@id/profile_about_text"
+                app:layout_constraintHeight_percent=".12"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/profile_friends_label" />
 
             <TextView
