--- a/app/src/main/res/layout/squad_list_item.xml
+++ b/app/src/main/res/layout/squad_list_item.xml
@@ -11,14 +11,21 @@
             type="com.appsolutions.profile.ProfileViewModel"/>
     </data>
 
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="100dp"
+        android:layout_height="170dp"
+        android:elevation="10dp">
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="150dp"
-        android:layout_height="170dp">
+        android:id="@+id/profile_click"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/profile_image"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="100dp"
             android:src="@drawable/ic_launcher"
             android:layout_margin="10dp"
             app:layout_constraintWidth_percent=".37"
@@ -39,5 +46,7 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </layout>
